# IoTPico

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
FreeRTOS/: CMakeLists.txt  FreeRTOSconfig.h
Libs/: lib_common.h
Libs/Utilities/: CMakeLists.txt  log_system.c  log_system.h
Projects/: README.md
Projects/SandBox/: CMakeLists.txt  main.c
